# sliiders

./: .gitignore  .gitmodules  HISTORY.rst  README.md  setup.cfg
environment/: environment.yml
notebooks/: README.md
notebooks/create-SLIIDERS-ECON/: README.md  create-SLIIDERS-ECON.ipynb  download-sliiders-econ-input-data.ipynb
notebooks/create-SLIIDERS-ECON/country_level_ypk/: README.md  ypk1_prep_clean.ipynb  ypk2_reorg_and_impute_ypk.ipynb  ypk3_demo_ratios_historical_reg.ipynb  ypk4_impute_hist_capital.ipynb  ypk5_projected_yp.ipynb  ypk6_projected_capital.ipynb
notebooks/create-SLIIDERS-ECON/exposure/: 1-create-coastline-segments.ipynb  10-combine_exposure_tiles.ipynb  2-create-segment-regions.ipynb  3-fill_missing_litpop_with_geg.ipynb  4-vectorize-wetlands.ipynb  5-get_positive_elev_tiles.ipynb  6-generate_datum_conversion_grid.ipynb  7-create_dem_mss.ipynb  8-generate_protected_areas.ipynb  9-generate_exposure_tiles.ipynb  README.md
notebooks/create-SLIIDERS-SLR/: README.md  convert-mat-version.ipynb  download-ifile-to-gcs.ipynb  generate-projected-lsl.ipynb  process-localizesl-output.ipynb  retrieve-num-gcms.ipynb
notebooks/data-acquisition/: 01-globcover.sh  02-mangroves.sh  03-download-sliiders-input-data.ipynb  run-all.sh
notebooks/data-cleaning/: 01-clean-country-socioecon-data.ipynb
notebooks/data-processing/: 3-create-SLIIDERS.ipynb  README.md
notebooks/data-processing/1-country-level-temporal-trends/: 2-historical-capital.ipynb  (+4 more)
sliiders/: __init__.py  cia_wfb_clean.py  country_level_ypk.py  dask.py  gcs.py  io.py  settings.py  spatial.py
(+11 files in other folders)
