[metadata]
name = sliiders
description = A global coastal dataset of physical and socioeconomic metrics organized by coastal segment and elevation slice for use in global coastal risk research
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Allen, Ian Bolliger, Nicholas Depsky, Junho Choi
author_email = ian.bolliger@blackrock.com
version = v1.0.0
url = https://github.com/ClimateImpactLab/sliiders
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
